--- a/resume.tex
+++ b/resume.tex
@@ -115,12 +115,12 @@
 
 \begin{center}
     \textbf{\Huge \scshape Aniket Khajanchi} \\ \vspace{1pt}
-    \href{mailto:ani.khajanchi257@gmail.com}{\underline{ani.khajanchi257@gmail.com}} \\ 
-    \href{https://twitter.com/AniketKhajanchi}{\underline{Twitter}} $|$ 
-    \href{https://linkedin.com/in/aniketkhajanchi}{\underline{LinkedIn}} $|$
-    \href{https://github.com/aniketk13}{\underline{Github}} $|$
-    \href{https://leetcode.com/aniketk13}{\underline{LeetCode}} $|$
-    \href{https://codechef.com/users/aniketk13}{\underline{CodeChef}}
+    \href{mailto:ani.khajanchi257@gmail.com}{\color{blue}\underline{ani.khajanchi257@gmail.com}} \\ 
+    \href{https://twitter.com/AniketKhajanchi}{\color{blue}\underline{Twitter}} $|$ 
+    \href{https://linkedin.com/in/aniketkhajanchi}{\color{blue}\underline{LinkedIn}} $|$
+    \href{https://github.com/aniketk13}{\color{blue}\underline{Github}} $|$
+    \href{https://leetcode.com/aniketk13}{\color{blue}\underline{LeetCode}} $|$
+    \href{https://codechef.com/users/aniketk13}{\color{blue}\underline{CodeChef}}
     
 \end{center}
 
@@ -164,7 +164,7 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/aniketk13/Feedback-Prime}{Feedback Prime }}{[ Android-Kotlin ]}}{Oct 2021}
+          {\textbf{\href{https://github.com/aniketk13/Feedback-Prime}{\color{blue}Feedback Prime }}{[ Android-Kotlin ]}}{Oct 2021}
           \resumeItemListStart
            \resumeItem{\textbf{Problem:} Smart Feedback Analysis for Support Engineers which save their work time by 3x}
            \resumeItem{\textbf{Solution:} Using Symbl.ai Async API and Conversation-intelligence, created an app which auto-generates User-experience report.}
@@ -174,7 +174,7 @@
     
 \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/aniketk13/Suite-Converter}{Suite Converter }}{[ Python ]}}{Dec 2020}
+          {\textbf{\href{https://github.com/aniketk13/Suite-Converter}{\color{blue}Suite Converter }}{[ Python ]}}{Dec 2020}
           \resumeItemListStart
            \resumeItem{\textbf{Problem:} Voice Assisted Smart File converter from Command Line for developers}
            \resumeItem{\textbf{Solution:} Using Voice Recognition and Speech Analysis, performs Inter-Conversion of files, Auto-catches Directory Path and keeps Files organised}
@@ -182,7 +182,7 @@
     \resumeSubHeadingListEnd
 \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/aniketk13/Billing_Management}{Billing Management }}{[ C++ ]}}{June 2021}
+          {\textbf{\href{https://github.com/aniketk13/Billing_Management}{\color{blue}Billing Management }}{[ C++ ]}}{June 2021}
           \resumeItemListStart
           \resumeItem{\textbf{Problem:} Self-Billing and Checkout system without any supervision.}
           \resumeItem{\textbf{Solution:} A User-friendly Billing and Inventory System with Users and Admin portal segregated. Also Encrypted the Input system to Authenticate the Admin for Inventory adjustments.}
@@ -208,9 +208,9 @@
     \small{\item{
         \resumeItemListStart
                 % \resumeItem{\textbf{\href{Link if any}{Best Achievement on Top}}: Write the best and coolest achievement on top.}
-                \resumeItem{\textbf{\href{https://apihacks.co}{Won API World Hackathon's and API-Hacks' Sponsor Track from Symbl.ai for Feedback Prime} }}
+                \resumeItem{\textbf{{Won API World Hackathon's and API-Hacks' Sponsor Track from Symbl.ai for Feedback Prime} }}
                 % \resumeItem{\textbf{\href{https://devpost.com/software/cryptodrive}{Write some winning stuff here}}}
-                \resumeItem{\textbf{Other Auspicious Titles Awarded: }\href{https://api.badgr.io/public/assertions/smxpDApNQkawRdyLq88rTA}{ Postman Student Expert}, \href{https://studentambassadors.microsoft.com/en-US/profile/124303}{Microsoft Student Ambassador}}
+                \resumeItem{\textbf{Other Auspicious Titles Awarded: }\href{https://api.badgr.io/public/assertions/smxpDApNQkawRdyLq88rTA}{ \color{blue}Postman Student Expert}, \href{https://studentambassadors.microsoft.com/en-US/profile/124303}{\color{blue}Microsoft Student Ambassador}}
       \resumeItemListEnd
     }}
  \end{itemize}
