--- a/resume.tex
+++ b/resume.tex
@@ -199,7 +199,7 @@
       \textbf{Languages(Familiar)}{: Python, Javascript } \\
      \textbf{Frameworks(Proficient)}{: SQL, Firebase  } \\
      \textbf{Developer Tools(Proficient)}{: Android-Studio, Postman } \\
-     \textbf{Libraries}{: Volley, Material Ui, Room  }
+     \textbf{Libraries}{: Volley, Material Ui, Retrofit, Room  }
     }}
  \end{itemize}
 
