--- a/resume.tex
+++ b/resume.tex
@@ -162,6 +162,16 @@
 
 %-----------PROJECTS-----------
 \section{Projects}
+
+ \resumeSubHeadingListStart
+      \resumeProjectHeading
+          {\textbf{\href{https://github.com/aniketk13/Intelli-Tags}{\color{blue}Intelli-Tags }}{[ Android-Kotlin ]}}{Dec 2021}
+          \resumeItemListStart
+          \resumeItem{\textbf{Problem:} Instant Hashtags generator for blogs and media content for adequate promotion}
+          \resumeItem{\textbf{Solution:} A smart tool made with Modzy ML models. In simple clicks, instantaneously generates relevant tags for your content and boosts them upto 2x globally to reach the target audience.}
+          \resumeItemListEnd
+    \resumeSubHeadingListEnd
+    
     \resumeSubHeadingListStart
       \resumeProjectHeading
           {\textbf{\href{https://github.com/aniketk13/Feedback-Prime}{\color{blue}Feedback Prime }}{[ Android-Kotlin ]}}{Oct 2021}
@@ -172,6 +182,8 @@
           \resumeItemListEnd
     \resumeSubHeadingListEnd
     
+   
+    
 \resumeSubHeadingListStart
       \resumeProjectHeading
           {\textbf{\href{https://github.com/aniketk13/Suite-Converter}{\color{blue}Suite Converter }}{[ Python ]}}{Dec 2020}
@@ -180,14 +192,7 @@
            \resumeItem{\textbf{Solution:} Using Voice Recognition and Speech Analysis, performs Inter-Conversion of files, Auto-catches Directory Path and keeps Files organised}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
-\resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{\href{https://github.com/aniketk13/Billing_Management}{\color{blue}Billing Management }}{[ C++ ]}}{June 2021}
-          \resumeItemListStart
-          \resumeItem{\textbf{Problem:} Self-Billing and Checkout system without any supervision.}
-          \resumeItem{\textbf{Solution:} A User-friendly Billing and Inventory System with Users and Admin portal segregated. Also Encrypted the Input system to Authenticate the Admin for Inventory adjustments.}
-          \resumeItemListEnd
-    \resumeSubHeadingListEnd
+
 
 
 %
@@ -197,9 +202,9 @@
     \small{\item{
      \textbf{Languages(Proficient)}{: C++, Kotlin, Java} \\
       \textbf{Languages(Familiar)}{: Python, Javascript } \\
-     \textbf{Frameworks(Proficient)}{: SQL, Firebase  } \\
-     \textbf{Developer Tools(Proficient)}{: Android-Studio, Postman } \\
-     \textbf{Libraries}{: Volley, Material Ui, Retrofit, Room  }
+     \textbf{Frameworks}{: SQL, Firebase  } \\
+     \textbf{Developer Tools}{: Android-Studio, AWS, Azure, Postman, Docker } \\
+     \textbf{Libraries}{: Volley, Material Ui, Room, Retrofit  }
     }}
  \end{itemize}
 
@@ -208,9 +213,10 @@
     \small{\item{
         \resumeItemListStart
                 % \resumeItem{\textbf{\href{Link if any}{Best Achievement on Top}}: Write the best and coolest achievement on top.}
-                \resumeItem{\textbf{{Won API World Hackathon's and API-Hacks' Sponsor Track from Symbl.ai for Feedback Prime} }}
+                \resumeItem{\textbf{{Won \href{https://devpost.com/software/feedback-prime-kbg8um}{\color{blue}API World Hackathon's} and API-Hacks' Sponsor Track from Symbl.ai for Feedback Prime} }}
                 % \resumeItem{\textbf{\href{https://devpost.com/software/cryptodrive}{Write some winning stuff here}}}
-                \resumeItem{\textbf{Other Auspicious Titles Awarded: }\href{https://api.badgr.io/public/assertions/smxpDApNQkawRdyLq88rTA}{ \color{blue}Postman Student Expert}, \href{https://studentambassadors.microsoft.com/en-US/profile/124303}{\color{blue}Microsoft Student Ambassador}}
+                \resumeItem{\href{https://studentambassadors.microsoft.com/en-US/profile/124303}{\color{blue}Microsoft Student Ambassador-Alpha} (One of the biggest global community for students) }
+                \resumeItem{\href{https://api.badgr.io/public/assertions/smxpDApNQkawRdyLq88rTA}{ \color{blue}Postman Student Expert}}
       \resumeItemListEnd
     }}
  \end{itemize}
