--- a/resume.tex
+++ b/resume.tex
@@ -172,28 +172,19 @@
 
  \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/aniketk13/quiz-api}{Quiz-API }}{[ NodeJS, MongoDB, Azure ]}}{July 2022}
+          {\textbf{\href{https://github.com/itsnitish22/Sign-Ease}{Sign-Ease }}{[ Android-Kotlin, Hello-Sign API (Dropbox), FireBase ]}}{September 2022}
           \resumeItemListStart
-          \resumeItem{\textbf{Problem:} A Quiz-Api for performing Addition, Deletion, Updation and Display of Questions}
-          \resumeItem{\textbf{Solution:} Based on Rest-API architecture, made a crud application which simplifies the whole job just by hitting a few endpoints on the client side.}
-          \resumeItemListEnd
-    \resumeSubHeadingListEnd
-    
-\resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{\href{https://github.com/aniketk13/API-Fest}{Inventory Manager }}{[ Fastify, MongoDB ]}}{Feb 2022}
-          \resumeItemListStart
-          \resumeItem{\textbf{Problem:} Application to track orders and automate the heavy inventory management and reduce human labor.}
-          \resumeItem{\textbf{Solution:} Created a CRUD API to manage orders and auto-update respective inventories using Open-API structure}
+          \resumeItem{\textbf{Problem:} Digital Approvals in documents/leaves for hostel/college students}
+          \resumeItem{\textbf{Solution:} Developed an Application for CRUD operations on Signature Requests with pre-built Templates and to the point information. It gets your requests signed by the respective authority seamlessly hence saving Time, Labour as well as Paper.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
     
  \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/aniketk13/Intelli-Tags}{Intelli-Tags }}{[ Android-Kotlin ]}}{Dec 2021}
+          {\textbf{\href{https://github.com/aniketk13/Intelli-Tags}{Intelli-Tags }}{[ Android-Kotlin, Modzy APIs, AWS ]}}{Dec 2021}
           \resumeItemListStart
           \resumeItem{\textbf{Problem:} Instant Hashtags generator for blogs and media content for adequate promotion}
-          \resumeItem{\textbf{Solution:} Built an Application using Modzy (now Smarty) ML models which instantly generates relevant social media tags for your content and boosts content engagement and reach upto 2x globally.}
+          \resumeItem{\textbf{Solution:} Built an Application using Modzy (now Smarty) ML models or APIs which analyses Media files like Text,Image and Video and instantly generates relevant Social Media Tags for your Content thus Boosting their Engagement and reach up to 2x globally.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
     
@@ -201,8 +192,8 @@
       \resumeProjectHeading
           {\textbf{\href{https://github.com/aniketk13/Feedback-Prime}{Feedback Prime }}{[ Android-Kotlin ]}}{Oct 2021}
           \resumeItemListStart
-           \resumeItem{\textbf{Problem:} Smart Feedback Analysis for Support Engineers which save their work time by 3x}
-           \resumeItem{\textbf{Solution:} Using Symbl.ai Async API and Conversation-intelligence, created an app which auto-generates User-experience report.}
+           \resumeItem{\textbf{Problem:} Smart Feedback Analysis for Support Engineers to avoid useless Feedback/Survey forms}
+           \resumeItem{\textbf{Solution:} Using Symbl.ai Async API and Conversation-intelligence, created an app that analyses the Media file and processes it to Auto-generate a detailed Feedback Report of the Conversation that reduces manual work for both Engineers and the Customers.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
     
