--- a/resume.tex
+++ b/resume.tex
@@ -190,7 +190,7 @@
     
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/aniketk13/Feedback-Prime}{Feedback Prime }}{[ Android-Kotlin ]}}{Oct 2021}
+          {\textbf{\href{https://github.com/aniketk13/Feedback-Prime}{Feedback Prime }}{[ Android-Kotlin, Symbl.ai API, Sawo-Labs API ]}}{Oct 2021}
           \resumeItemListStart
            \resumeItem{\textbf{Problem:} Smart Feedback Analysis for Support Engineers to avoid useless Feedback/Survey forms}
            \resumeItem{\textbf{Solution:} Using Symbl.ai Async API and Conversation-intelligence, created an app that analyses the Media file and processes it to Auto-generate a detailed Feedback Report of the Conversation that reduces manual work for both Engineers and the Customers.}
