--- a/resume.tex
+++ b/resume.tex
@@ -115,8 +115,8 @@
 
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{{\LARGE Aniket Khajanchi}} & Email: \href{mailto:}{ani.khajanchi257@gmail.com}\\
-  GitHub:~~~~\href{https://github.com/aniketk13/}{github.com/aniketk13/} & Mobile:~~~\href{tel:8927048300}{+91-8927048300} \\
-  LeetCode:~~\href{https://leetcode.com/aniketk13/}{leetcode.com/aniketk13/} & LinkedIn:~\href{https://www.linkedin.com/in/aniketkhajanchi/}{linkedin.com/in/aniketkhajanchi}
+  GitHub:~\href{https://github.com/aniketk13/}{github.com/aniketk13/} & Mobile:~\href{tel:8927048300}{+91-8927048300} \\
+  LeetCode:~\href{https://leetcode.com/aniketk13/}{leetcode.com/aniketk13/} & LinkedIn:~\href{https://www.linkedin.com/in/aniketkhajanchi/}{linkedin.com/in/aniketkhajanchi}
 \end{tabular*}
 
 % %-----------EXPERIENCE-----------
@@ -166,7 +166,16 @@
       {12th, Non-Medical Computer Science}{April 2018 -- March 2020}
   \resumeSubHeadingListEnd
   
-
+%-----------PROGRAMMING SKILLS-----------
+\section{Technical Skills}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Languages}{: C++, Kotlin, Java, JavaScript, Python} \\
+     \textbf{Frameworks}{: SQL, Firebase, Node.js, Express  } \\
+     \textbf{Developer Tools}{: Android-Studio, AWS, Azure, Postman, Google Cloud, Docker } \\
+     \textbf{Libraries}{: MongoDB, Volley, Material Ui, Room, Retrofit  }
+    }}
+ \end{itemize}
 %-----------PROJECTS-----------
 \section{Projects}
 
@@ -174,8 +183,8 @@
       \resumeProjectHeading
           {\textbf{\href{https://github.com/itsnitish22/Sign-Ease}{Sign-Ease }}{[ Android-Kotlin, Hello-Sign API (Dropbox), FireBase ]}}{September 2022}
           \resumeItemListStart
-          \resumeItem{\textbf{Problem:} Digital Approvals in documents/leaves for hostel/college students}
-          \resumeItem{\textbf{Solution:} Developed an Application for CRUD operations on Signature Requests with pre-built Templates and to the point information. It gets your requests signed by the respective authority seamlessly hence saving Time, Labour as well as Paper.}
+          \resumeItem{\textbf{Problem:} Digital Approvals in documents/leaves for hostel \& college students}
+          \resumeItem{\textbf{Solution:} Developed an Application for CRUD operations on Signature Requests with pre-built Templates and to-the-point information. The project gets your requests signed by the respective authority seamlessly hence saving time, labour as well as Paper.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
     
@@ -184,7 +193,7 @@
           {\textbf{\href{https://github.com/aniketk13/Intelli-Tags}{Intelli-Tags }}{[ Android-Kotlin, Modzy APIs, AWS ]}}{Dec 2021}
           \resumeItemListStart
           \resumeItem{\textbf{Problem:} Instant Hashtags generator for blogs and media content for adequate promotion}
-          \resumeItem{\textbf{Solution:} Built an Application using Modzy (now Smarty) ML models or APIs which analyses Media files like Text,Image and Video and instantly generates relevant Social Media Tags for your Content thus Boosting their Engagement and reach up to 2x globally.}
+          \resumeItem{\textbf{Solution:} Built an Application using Modzy (now Smarty) ML models (APIs) which analyses Media files like Text, Images, and Video and instantly generates relevant Social Media Tags for your Content thus Boosting their engagement and reach by up to 2x globally.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
     
@@ -198,22 +207,19 @@
     \resumeSubHeadingListEnd
     
    
-    
-
-
-
-
-%
-%-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
+\section{Licenses \& certifications}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: C++, Kotlin, Java, JavaScript, Python} \\
-     \textbf{Frameworks}{: SQL, Firebase, Node.js, Express, Fastify  } \\
-     \textbf{Developer Tools}{: Android-Studio, AWS, Azure, Postman, Google Cloud, Docker } \\
-     \textbf{Libraries}{: MongoDB, Volley, Material Ui, Room, Retrofit  }
+        \resumeItemListStart
+                % \resumeItem{\textbf{\href{Link if any}{Best Achievement on Top}}: Write the best and coolest achievement on top.}
+                \resumeItem{\textbf{{Cisco Networking Essentials}}}
+                \resumeItem{\textbf{\href{https://www.linkedin.com/learning/certificates/0678a1527860b8e6ba5694ca1c73c5bab5c3463b8bb5d6c3b9a1fcc19be38ce9}{Building an Android App with Jetpack Libraries}}}
+                \resumeItem{\textbf{\href{https://www.linkedin.com/learning/certificates/0f804705fc3f345406c7a7ccdc10ec244d4384268e86e94bc5eafd52f67755d0}{Android Development: Retrofit with Kotlin}}}
+      \resumeItemListEnd
     }}
  \end{itemize}
+    
+
 
 \section{Awards and Volunteer Experience }
  \begin{itemize}[leftmargin=0.15in, label={}]
