--- a/resume.tex
+++ b/resume.tex
@@ -114,9 +114,9 @@
 %----------HEADING----------
 
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{{\LARGE Aniket Khajanchi}} & Email: \href{mailto:}{ani.khajanchi257@gmail.com}\\
-  GitHub:~\href{https://github.com/aniketk13/}{github.com/aniketk13/} & Mobile:~\href{tel:8927048300}{+91-8927048300} \\
-  LeetCode:~\href{https://leetcode.com/aniketk13/}{leetcode.com/aniketk13/} & LinkedIn:~\href{https://www.linkedin.com/in/aniketkhajanchi/}{linkedin.com/in/aniketkhajanchi}
+  \textbf{{\LARGE Aniket Khajanchi}} & \textbf{Email: }\href{mailto:}{ani.khajanchi257@gmail.com}\\
+\textbf{GitHub: }~\href{https://github.com/aniketk13/}{github.com/aniketk13/} & \textbf{Mobile: }~\href{tel:8927048300}{+91-8927048300} \\
+  \textbf{LeetCode: }~\href{https://leetcode.com/aniketk13/}{leetcode.com/aniketk13/} & \textbf{LinkedIn: }~\href{https://www.linkedin.com/in/aniketkhajanchi/}{linkedin.com/in/aniketkhajanchi}
 \end{tabular*}
 
 % %-----------EXPERIENCE-----------
@@ -154,37 +154,34 @@
 %   \resumeSubHeadingListEnd
 
 %-----------EDUCATION-----------
-\section{Education}
+\section{\textbf{Education}}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Chandigarh University - 8.49 CGPA}{Mohali, Punjab}
+      {Chandigarh University - 8.39 CGPA}{Mohali, Punjab}
       {Junior, B.E in Computer Science and Engineering}{August 2020 -- August 2024*}
   \resumeSubHeadingListEnd
   \resumeSubHeadingListStart
     \resumeSubheading
       {Hem Sheela Model School - 94.6\%}{Durgapur, West Bengal}
-      {12th, Non-Medical Computer Science}{April 2018 -- March 2020}
+      {12th, Non-Medical Computer Science}{April 2018 -- March 2020 } 
   \resumeSubHeadingListEnd
   
-%-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{: C++, Kotlin, Java, JavaScript, Python} \\
-     \textbf{Frameworks}{: SQL, Firebase, Node.js, Express  } \\
-     \textbf{Developer Tools}{: Android-Studio, AWS, Azure, Postman, Google Cloud, Docker } \\
-     \textbf{Libraries}{: MongoDB, Volley, Material Ui, Room, Retrofit  }
-    }}
- \end{itemize}
 %-----------PROJECTS-----------
-\section{Projects}
-
+\section{\newline \textbf{Projects}}
+\resumeSubHeadingListStart
+      \resumeProjectHeading
+          {\textbf{\href{https://github.com/aniketk13/FarmApp}{Krishi-Sahyog }}{[ Android-Kotlin, FireBase ]}}{March 2023}
+          \resumeItemListStart
+          \resumeItem{\textbf{Problem:} Digitally helping Farmers to get fair Crop value}
+          \resumeItem{\textbf{Solution:} Connecting Farmers directly with Buyers, cutting out the middleman and boosting earnings for both parties. Introduced a Bidding System for Buyers to bid on a Farmer's crop listing, providing a fair price and catering to market demand. Full-fledged product offering end-to-end services, including invoicing, contract generation, and Logistic support.}
+          \resumeItemListEnd
+    \resumeSubHeadingListEnd
  \resumeSubHeadingListStart
       \resumeProjectHeading
           {\textbf{\href{https://github.com/itsnitish22/Sign-Ease}{Sign-Ease }}{[ Android-Kotlin, Hello-Sign API (Dropbox), FireBase ]}}{September 2022}
           \resumeItemListStart
           \resumeItem{\textbf{Problem:} Digital Approvals in documents/leaves for hostel \& college students}
-          \resumeItem{\textbf{Solution:} Developed an Application for CRUD operations on Signature Requests with pre-built Templates and to-the-point information. The project gets your requests signed by the respective authority seamlessly hence saving time, labour as well as Paper.}
+          \resumeItem{\textbf{Solution:} Developed an Application for CRUD operations on Signature Requests with pre-built Templates and to-the-point information. The project gets your applications signed by the respective authority seamlessly hence saving time, labor as well as Paper. Real-time application tracking enabled to check request status.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
     
@@ -202,26 +199,37 @@
           {\textbf{\href{https://github.com/aniketk13/Feedback-Prime}{Feedback Prime }}{[ Android-Kotlin, Symbl.ai API, Sawo-Labs API ]}}{Oct 2021}
           \resumeItemListStart
            \resumeItem{\textbf{Problem:} Smart Feedback Analysis for Support Engineers to avoid useless Feedback/Survey forms}
-           \resumeItem{\textbf{Solution:} Using Symbl.ai Async API and Conversation-intelligence, created an app that analyses the Media file and processes it to Auto-generate a detailed Feedback Report of the Conversation that reduces manual work for both Engineers and the Customers.}
+           \resumeItem{\textbf{Solution:} Using Symbl.ai Async API and Conversation-intelligence, created an app that analyses the Media file and processes it to Auto-generate a detailed Feedback Report of the Conversation that reduces manual work for both Engineers and the Customers.} \newline
           \resumeItemListEnd
     \resumeSubHeadingListEnd
-    
+%-----------PROGRAMMING SKILLS-----------
+\section{\textbf{Technical Skills}}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Languages}{: Kotlin, Java, C++, JavaScript, Python} \\
+     \textbf{Frameworks}{: SQL, Firebase, Node.js, Express  } \\
+     \textbf{Developer Tools}{: Android-Studio, AWS, Azure, Postman, Google Cloud, Docker } \\
+     \textbf{Libraries}{: MongoDB, Volley, Material Ui, Room, Retrofit  }
+    }} 
+ \end{itemize}
    
-\section{Licenses \& certifications}
+\section{\textbf{Licenses \& certifications}}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
         \resumeItemListStart
                 % \resumeItem{\textbf{\href{Link if any}{Best Achievement on Top}}: Write the best and coolest achievement on top.}
-                \resumeItem{\textbf{{Cisco Networking Essentials}}}
                 \resumeItem{\textbf{\href{https://www.linkedin.com/learning/certificates/0678a1527860b8e6ba5694ca1c73c5bab5c3463b8bb5d6c3b9a1fcc19be38ce9}{Building an Android App with Jetpack Libraries}}}
-                \resumeItem{\textbf{\href{https://www.linkedin.com/learning/certificates/0f804705fc3f345406c7a7ccdc10ec244d4384268e86e94bc5eafd52f67755d0}{Android Development: Retrofit with Kotlin}}}
+                \resumeItem{\textbf{\href{https://www.linkedin.com/learning/certificates/0f804705fc3f345406c7a7ccdc10ec244d4384268e86e94bc5eafd52f67755d0}{Android Development: Retrofit with Kotlin}}} 
+
+                \resumeItem{\textbf{{Cisco Networking Essentials}}}
+                \newline
       \resumeItemListEnd
     }}
  \end{itemize}
     
 
 
-\section{Awards and Volunteer Experience }
+\section{\textbf{Awards and Volunteer Experience} }
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
         \resumeItemListStart
