--- a/resume.tex
+++ b/resume.tex
@@ -207,8 +207,8 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Kotlin, Java, C++, JavaScript, Python} \\
-     \textbf{Frameworks}{: SQL, Firebase, Node.js, Express  } \\
-     \textbf{Developer Tools}{: Android-Studio, AWS, Azure, Postman, Google Cloud, Docker } \\
+     \textbf{Frameworks}{: PostgreSQL, Firebase, Node.js, Express  } \\
+     \textbf{Developer Tools}{: Android-Studio, Azure, AWS, Postman, Google Cloud, Docker } \\
      \textbf{Libraries}{: MongoDB, Volley, Material Ui, Room, Retrofit  }
     }} 
  \end{itemize}
